@@ -58,7 +58,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 
@@ -210,12 +210,12 @@ public class GetFileIDsRequestHandler extends PerformRequestHandler<GetFileIDsRe
      * @throws IOException If something goes wrong.
      */
     private void uploadFile(File fileToUpload, String url) throws IOException {
-        URL uploadUrl = new URL(url);
+        final URI uploadUri = URI.create(url);
 
         log.debug("Uploading file '{}' to {}", fileToUpload.getName(), url);
         try (InputStream in = new BufferedInputStream(new FileInputStream(fileToUpload))) {
-            FileExchange fileExchange = FileExchangeResolver.getBasicFileExchangeFromURL(uploadUrl);
-            fileExchange.putFile(in, uploadUrl);
+            FileExchange fileExchange = FileExchangeResolver.getBasicFileExchangeFromURL(uploadUri.toURL());
+            fileExchange.putFile(in, uploadUri.toURL());
         }
     }
 
