@@ -51,6 +51,7 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
@@ -174,7 +175,7 @@ public class GetAuditTrailsRequestHandler extends AbstractRequestHandler<GetAudi
         log.debug("Creating audit trail file and uploading it.");
         try {
             File fileToUpload = createAuditTrailFile(message, extractedAuditTrails);
-            URL uploadUrl = new URL(message.getResultAddress());
+            URL uploadUrl = new URI(message.getResultAddress()).toURL();
 
             log.debug("Uploading file '{}' to {}", fileToUpload.getName(), uploadUrl.toExternalForm());
             FileExchange fileExchange = FileExchangeResolver.getBasicFileExchangeFromURL(uploadUrl);
